--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,6 @@ jobs:
             git clone git@github.com:ferter3006/pocketest.git /var/www/vhosts/pocketest.ferter.es/httpdocs
             cd /var/www/vhosts/pocketest.ferter.es/httpdocs
             /usr/bin/go build -o /opt/pocketbase/pocketbase main.go
+            cp config/ /opt/pocketbase/config/ -r
             sudo systemctl restart pocketbase
             
